logs/cockatoo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bitarray'...
Listing './lib/python3.5/site-packages/bitarray-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cockatoo'...
Compiling './lib/python3.5/site-packages/cockatoo/cli.py'...
***   File "./lib/python3.5/site-packages/cockatoo/cli.py", line 121
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cockatoo/screen.py'...
***   File "./lib/python3.5/site-packages/cockatoo/screen.py", line 216
    print "Name: %s" % self.name
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cockatoo-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/marshmallow'...
Listing './lib/python3.5/site-packages/marshmallow-0.7.0.dist-info'...
Listing './lib/python3.5/site-packages/pinky'...
Listing './lib/python3.5/site-packages/pinky/canonicalization'...
Compiling './lib/python3.5/site-packages/pinky/canonicalization/disambiguate.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (disambiguate.py, line 143)
Compiling './lib/python3.5/site-packages/pinky/canonicalization/equiv.py'...
***   File "./lib/python3.5/site-packages/pinky/canonicalization/equiv.py", line 47
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pinky/fingerprints'...
Listing './lib/python3.5/site-packages/pinky/mol'...
Compiling './lib/python3.5/site-packages/pinky/mol/atypes.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (atypes.py, line 201)
Compiling './lib/python3.5/site-packages/pinky/mol/chirality.py'...
***   File "./lib/python3.5/site-packages/pinky/mol/chirality.py", line 131
    print c0.getChirality([a,b,c,d])
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pinky/mol/molecule.py'...
***   File "./lib/python3.5/site-packages/pinky/mol/molecule.py", line 79
    raise "Already have atom", atom
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pinky/perception'...
Compiling './lib/python3.5/site-packages/pinky/perception/figueras.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (figueras.py, line 69)
Listing './lib/python3.5/site-packages/pinky/smiles'...
Listing './lib/python3.5/site-packages/pinky-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
